--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "type": "lldb",
             "request": "launch",
             "name": "Debug Run ./bilang",
-            "program": "./bilang",
+            "program": "${workspaceFolder}/src.bin",
             "args": [],
             "cwd": "${workspaceFolder}"
         },
