--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -20,6 +20,18 @@
                 "focus": false,
                 "panel": "shared",
             },
+            "problemMatcher": {
+                "owner": "odin",
+                "fileLocation": "absolute",
+                "pattern": {
+                    "regexp": "^(.+):(\\d+):(\\d+):\\s+(Error|Warning):\\s+(.+)$",
+                    "file": 1,
+                    "line": 2,
+                    "column": 3,
+                    "severity": 4,
+                    "message": 5
+                }
+            }
         },
     ],
 }
