--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
           release: latest
 
       - name: Run Tests
-        run: ./cmd.sh test
+        run: make test
 
       - name: Build site wasm
-        run: ./cmd.sh build_wasm
+        run: make build-wasm
